// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Accordion Default 1`] = `
Array [
  .c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c6 {
  padding-top: 4px;
  padding-bottom: 12px;
  padding-left: 24px;
}

.c6[hidden] {
  display: none;
}

.c3 {
  font: inherit;
  box-sizing: border-box;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border: 0;
  padding-top: 12px;
  padding-right: 0;
  padding-bottom: 12px;
  padding-left: 24px;
  background-color: transparent;
  cursor: pointer;
}

.c3:hover,
.c3:focus {
  background-color: #F5F5F5;
}

.c4 {
  position: absolute;
  top: 15px;
  left: 0;
}

<div
    className="c0 c1"
  >
    <h3
      className="c2"
    >
      <button
        aria-expanded={false}
        className="c3"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c4"
        >
          <svg
            aria-hidden="true"
            className="c5"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 12 12"
          >
            <path
              d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        Låg CO₂ risk
      </button>
    </h3>
    <div
      className="c6"
      hidden={true}
    >
      <p
        className="c7"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
      </p>
    </div>
  </div>,
  .c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c6 {
  padding-top: 4px;
  padding-bottom: 12px;
  padding-left: 24px;
}

.c6[hidden] {
  display: none;
}

.c3 {
  font: inherit;
  box-sizing: border-box;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border: 0;
  padding-top: 12px;
  padding-right: 0;
  padding-bottom: 12px;
  padding-left: 24px;
  background-color: transparent;
  cursor: pointer;
}

.c3:hover,
.c3:focus {
  background-color: #F5F5F5;
}

.c4 {
  position: absolute;
  top: 15px;
  left: 0;
}

<div
    className="c0 c1"
  >
    <h3
      className="c2"
    >
      <button
        aria-expanded={false}
        className="c3"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c4"
        >
          <svg
            aria-hidden="true"
            className="c5"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 12 12"
          >
            <path
              d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        Sustainability score
      </button>
    </h3>
    <div
      className="c6"
      hidden={true}
    >
      <p
        className="c7"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
      </p>
    </div>
  </div>,
]
`;

exports[`Storyshots Molecules | Accordion With Footer 1`] = `
Array [
  .c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c6 {
  padding-top: 4px;
  padding-bottom: 12px;
  padding-left: 24px;
}

.c6[hidden] {
  display: none;
}

.c3 {
  font: inherit;
  box-sizing: border-box;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border: 0;
  padding-top: 12px;
  padding-right: 0;
  padding-bottom: 12px;
  padding-left: 24px;
  background-color: transparent;
  cursor: pointer;
}

.c3:hover,
.c3:focus {
  background-color: #F5F5F5;
}

.c4 {
  position: absolute;
  top: 15px;
  left: 0;
}

<div
    className="c0 c1"
  >
    <h3
      className="c2"
    >
      <button
        aria-expanded={false}
        className="c3"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c4"
        >
          <svg
            aria-hidden="true"
            className="c5"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 12 12"
          >
            <path
              d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        Låg CO₂ risk
      </button>
    </h3>
    <div
      className="c6"
      hidden={true}
    >
      <p
        className="c7"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
      </p>
    </div>
  </div>,
  .c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c6 {
  padding-top: 4px;
  padding-bottom: 12px;
  padding-left: 24px;
}

.c6[hidden] {
  display: none;
}

.c3 {
  font: inherit;
  box-sizing: border-box;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border: 0;
  padding-top: 12px;
  padding-right: 0;
  padding-bottom: 12px;
  padding-left: 24px;
  background-color: transparent;
  cursor: pointer;
}

.c3:hover,
.c3:focus {
  background-color: #F5F5F5;
}

.c4 {
  position: absolute;
  top: 15px;
  left: 0;
}

<div
    className="c0 c1"
  >
    <h3
      className="c2"
    >
      <button
        aria-expanded={false}
        className="c3"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c4"
        >
          <svg
            aria-hidden="true"
            className="c5"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 12 12"
          >
            <path
              d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        Sustainability score
      </button>
    </h3>
    <div
      className="c6"
      hidden={true}
    >
      <p
        className="c7"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
      </p>
    </div>
  </div>,
  .c0 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

<div
    className="c0"
  />,
  .c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  padding-top: 12px;
}

.c2 {
  display: inline;
  padding: 0;
  color: #0046FF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    className="c0"
  >
    <p
      className="c1"
    >
      Did not find what you look for? 
      <a
        className="c2"
        href="#/"
        onClick={[Function]}
      >
        Check out FAQ
      </a>
    </p>
  </div>,
]
`;
